OVN v20.06.3 - xx xxx xxxx
--------------------------

OVN v20.06.2 - 21 Aug 2020
--------------------------
   - ovn-controller incremental processing bug fixes.
   - Scale improvements which reduce logical flows to limit
     ARP/NS broadcast domain and to optionally disable neighbor
     learning from ARP request/IPv6 Neighbor Solicitation.

OVN v20.06.1 - 08 Jul 2020
--------------------------

OVN v20.06.0 - 08 Jun 2020
--------------------------
   - Added support for external_port_range in NAT table.
   - ovn-controller no longer monitor the external_ids column from
     the Chassis table. This was done to avoid having to do a flow
     recalculation every time external systems wrote to this column. The
     chassis configuration has now being moved to a new column called
     "other_config". As a note, the configurations are still be written to
     the external_ids column (but no longer triggers an alert) to
     keep the backward compatibility with current systems that may be
     reading it from that column but, this behavior will be removed
     in the future.
   - Added IPv6 Prefix Delegation support in OVN.
   - OVN now uses OpenFlow 1.5.
   - Added support to choose selection methods - dp_hash or
     hash (with specified hash fields) for OVN load balancer
     backend selection. This is incompatible with older versions.
     Care should be taken while upgrading as the existing
     load balancer traffic will be affected if ovn-controllers
     are not stopped before uprading northd services.
   - Added limited support for logical switches with multiple localnet ports.
     The feature requires that no chassis has two or more physical networks
     with localnet ports that belong to the same logical switch mapped. Routing
     between the ports to be implemented by fabric.

   - OVN Interconnection:
     * Support for L3 interconnection of multiple OVN deployments with tunnels
       managed by OVN.  See instructions in