@@ -1,3 +1,14 @@
+Post-v20.09.0
+---------------------
+   - The "datapath" argument to ovn-trace is now optional, since the
+     datapath can be inferred from the inport (which is required).
+   - The obsolete "redirect-chassis" way to configure gateways has been
+     removed.  See ovn-nb(5) for advice on how to update your config if needed.
+   - Add IPv4 iPXE support introducing "bootfile_name_alt" option to ovn dhcp
+     server.
+   - Support other_config:vlan-passthru=true to allow VLAN tagged incoming
+     traffic.
+
 OVN v20.06.3 - xx xxx xxxx
 --------------------------
 
